--- a/src/components/DeckBox.module.css
+++ b/src/components/DeckBox.module.css
@@ -12,11 +12,37 @@
 .box {
   aspect-ratio: 1;
   box-sizing: border-box;
+  position:relative;
 }
 
 .background_wrap {
     width:100%;
     height:100%;
-    background:blue;
-    opacity:0.4;
+    background: var(--custom-bg-color, blue);
+    opacity:1;
+}
+
+
+.deck_name {
+  width:100%;
+  background:#000;
+  position:absolute;
+  bottom:0;
+  opacity:0.9;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  height:60px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:20px;
+  @media (max-width: 768px) {
+    height:32px;
+    opacity:0.9;
+    font-size:14px;
+  }
+}
+
+.deck_name p {
+  color:aliceblue;
+  text-align:center;
 }
